--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1632,3 +1632,9 @@ table td {
 .jobPicture img {
     width: 190px;
 }
+
+.allPage {
+    width: 100%;
+    height: 100%;
+    background-color: #131313;
+}
