--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1431,15 +1431,6 @@ table td {
     z-index: 1;
 }
 
-.videoBg {
-    inset: 0;
-    max-width: none;
-    max-height: none;
-    pointer-events: none;
-    transform-style: preserve-3d;
-    backface-visibility: hidden;
-}
-
 .controlbar {
     display: none !important;
 }
@@ -1637,4 +1628,37 @@ table td {
     width: 100%;
     height: 100%;
     background-color: #131313;
+}
+
+.donotshow {
+    position: absolute;
+    z-index: 20;
+    top: -2000px;
+    left: -3000px;
+}
+
+.videoBg {
+    inset: 0;
+    max-width: none;
+    max-height: none;
+    pointer-events: none;
+    transform-style: preserve-3d;
+    backface-visibility: hidden;
+}
+
+.notshow {
+    visibility: hidden;
+}
+
+@keyframes loadVideo {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.nowshow {
+    animation: 3s ease-out 0s 1 loadVideo;
 }
