--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1646,19 +1646,19 @@ table td {
     backface-visibility: hidden;
 }
 
-.notshow {
-    visibility: hidden;
-}
+/*.notshow {*/
+/*    visibility: hidden;*/
+/*}*/
 
-@keyframes loadVideo {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
+/*@keyframes loadVideo {*/
+/*    0% {*/
+/*        opacity: 0;*/
+/*    }*/
+/*    100% {*/
+/*        opacity: 1;*/
+/*    }*/
+/*}*/
 
-.nowshow {
-    animation: 3s ease-out 0s 1 loadVideo;
-}
+/*.nowshow {*/
+/*    animation: 3s ease-out 0s 1 loadVideo;*/
+/*}*/
