Max column to 4

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -309,7 +309,6 @@ a.yellowHover {
     color: whitesmoke !important;
 }
 
-
 a.yellowHover:hover {
     color: yellow !important;
 }
@@ -1569,6 +1568,7 @@ table td {
 
 .teamContainer {
     margin: 0 100px;
+    max-width: 1300px;
 }
 
 .teamMemberContainer {
