--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1488,6 +1488,14 @@ table td {
     margin: 0 24px;
 }
 
+@media (max-width: 900px) {
+    .grid-item {
+        margin: 0 16px;
+    }
+
+}
+
+
 .hcard:hover {
     filter: grayscale(0);
 }
