--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -599,6 +599,10 @@ h2 {
     font-size: 3rem !important;
 }
 
+.smaller {
+    font-size: 0.8rem;
+}
+
 @media (min-width: 1200px) {
     .home-section h1 {
         font-size: 4rem;
@@ -1492,9 +1496,7 @@ table td {
     .grid-item {
         margin: 0 16px;
     }
-
 }
-
 
 .hcard:hover {
     filter: grayscale(0);
@@ -1652,6 +1654,7 @@ table td {
     color: white;
     font-size: 1rem;
     text-align: center;
+    max-width: 190px;
 }
 
 .jobPicture {
