added skip button

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1822,3 +1822,9 @@ table td {
 /*.navbar-toggler.collapsed {*/
 /*    visibility: visible;*/
 /*}*/
+.skip {
+    color: yellow;
+    background-color: black;
+    float: right;
+    width: 5%;
+}
