--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1835,7 +1835,7 @@ table td {
 .skip div {
     transform: skewX(6deg);
 }
-.images {
-    height: 250px;
-    width: 250px;
+.mobileImages {
+    height: 150px;
+    width: 150px;
 }
