--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1839,3 +1839,47 @@ table td {
     height: 180px;
     width: 33%;
 }
+
+.sectionWrapper{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modalWrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 945px;
+    height: 556px;
+    background-image: url(../assets/WidescreenBox@2x.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    padding: 25px;
+    opacity: 90%;
+}
+
+.modalData{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 5%;
+}
+
+.modalTitle{
+    font-family: Wrong, sans-serif;
+    font-size: 5vw;
+    color: white;
+    text-align: center;
+}
+
+.modalMessage{
+    font-family: Modeco, sans-serif;
+    text-align: center;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
