--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1841,7 +1841,7 @@ table td {
 }
 
 .sectionWrapper {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100vh;
     z-index: 100;
@@ -1875,7 +1875,7 @@ table td {
 
 .modalTitle {
     font-family: Wrong, sans-serif;
-    font-size: 5vw;
+    font-size: 5rem;
     color: white;
     text-align: center;
 }
