--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -10,6 +10,7 @@
     font-weight: normal;
 }
 
+
 a {
     text-decoration: none !important;
 }
@@ -1838,4 +1839,74 @@ table td {
 .mobileImages {
     height: 180px;
     width: 33%;
+}
+
+
+/* Modal  Style*/
+.overlay {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+}
+
+.modalContainer {
+    max-width: 850px;
+    width: 100%;
+    height: 50%;
+    top: 56%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.75);
+    border-radius: 8px;
+    background-size: 850px 600px;
+    background-image: url(../images/farm.png);
+    position: fixed;
+    display: flex;
+    background-color: #000000;
+}
+
+.content {
+    padding: 1rem 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+.content .title {
+    font-family:Wrong;
+    font-size: 70px;
+    letter-spacing: 1.4px;
+    color: white;
+    align-items: left;
+}
+
+.content .paragraph {
+    font-family: Modeco;
+    font-weight: 34;
+    font-size: 24px;
+    margin-top: -15px;
+    margin-bottom: -29px;
+    align-items: center;
+    color: white;
+
+}
+.content .img {
+    cursor: "pointer"
+}
+.closeBtn {
+    top: 8px;
+    right: 8px;
+    position: fixed;
+    cursor: pointer;
+}
+@media screen and (max-width: 500px) {
+    .modalContainer {
+        flex-direction: column;
+        top: 0;
+        left: 0;
+        transform: none;
+        width: 100%;
+        height: 100%;
+    }
+
 }
