--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1875,3 +1875,8 @@ table td {
     display: flex;
     font-size: larger;
 }
+.empire{
+        font-size: 500%;
+        font-family: Wrong, sans-serif;
+        padding-top: 10%;
+}
