--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1875,8 +1875,24 @@ table td {
     display: flex;
     font-size: larger;
 }
-.empire {
+.title {
     font-size: 500%;
     font-family: Wrong, sans-serif;
     padding-top: 10%;
 }
+.empireButton{
+    border: 1px #a69d0a solid;
+    border-radius: 50px;
+    font-weight: bold;
+    color: black;
+    background: #fae901;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    box-shadow: 0px 0px 15px yellow;
+    font-size: 110%;
+}
+.exchanges img {
+    height: 40px !important;
+  }
