--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -67,12 +67,6 @@ body {
     }
 }
 
-@media (min-width: 1200px) {
-    body {
-        background-color: black; /* #131313 */
-    }
-}
-
 .imageLogo {
     display: block;
     z-index: 1;
@@ -130,15 +124,12 @@ a {
 
 .navbar-light .navbar-text {
     color: whitesmoke;
-    padding: 0.5rem 0.4rem !important;
-    font-size: 0.8rem;
 }
 
 .navbar-collapse a,
 .navbar-light .navbar-text a,
 .navbar-collapse .span2 {
     font-weight: 400;
-    padding: 0.3rem 0.3rem !important;
     font-size: 0.85rem;
 }
 
@@ -169,34 +160,6 @@ a {
     .container-sm,
     .container-xl {
         max-width: 1200px !important;
-    }
-}
-
-@media (min-width: 1200px) {
-    .navbar-collapse a,
-    .navbar-light .navbar-text a,
-    .navbar-collapse .span2 {
-        padding: 0.5rem 1rem !important;
-        font-size: 0.9rem;
-    }
-
-    .navbar-light .navbar-text {
-        padding: 0.5rem 1rem !important;
-        font-size: 0.9rem;
-    }
-
-    /*.navbar-light .navbar-text i,*/
-    .navbar-light .navbar-text .extra,
-        /*.navbar-collapse a i,*/
-    .navbar-collapse a .extra,
-    .navbar-collapse .span2 {
-        display: inline !important;
-    }
-
-    .big {
-        font-size: 5rem;
-        padding-right: 20%;
-        margin: 0 0 -28px;
     }
 }
 
@@ -288,10 +251,6 @@ div.textBlock p:last-child {
 /*    background-color: #002 !important;*/
 /*    border-bottom: 1px dashed #309 !important;*/
 /*}*/
-
-.mr-auto a {
-    font-size: 1.5rem !important;
-}
 
 @media (min-width: 990px) {
     .mr-auto a {
@@ -389,12 +348,6 @@ div.subtitle.transparent {
 div.subtitle div {
     font-size: 0.9rem;
     padding-bottom: 6px;
-}
-
-@media (min-width: 1200px) {
-    div.subtitle {
-        padding-top: 64px;
-    }
 }
 
 img.cover {
@@ -527,19 +480,6 @@ h2 {
 
 .smaller {
     font-size: 0.8rem;
-}
-
-@media (min-width: 1200px) {
-    .home-section h1 {
-        font-size: 4rem;
-    }
-
-    /*.home-section h2 {*/
-    /*    font-size: 3rem;*/
-    /*}*/
-    .large {
-        font-size: 5rem !important;
-    }
 }
 
 .centrato {
@@ -735,19 +675,14 @@ img.pc90 {
     text-decoration: none;
 }
 
-.socialLinks a:hover {
-    color: yellow !important;
-    text-decoration: none;
-}
-
 .socialLinks i {
-    font-size: 1.5rem;
+    font-size: 1.5vw;
+    padding: 0 12px;
 }
 
 .bitSmaller {
-    font-size: 0.8rem;
+    font-size: 1.2vw;
     margin-right: 6px;
-    color: yellow !important;
 }
 
 /*input::placeholder { !* Chrome, Firefox, Opera, Safari 10.1+ *!*/
@@ -1178,15 +1113,6 @@ table td {
     max-width: 999px;
 }
 
-@media (min-width: 1200px) {
-    .navbar-collapse a,
-    .navbar-light .navbar-text a,
-    .navbar-collapse .span2 {
-        padding: 0.5rem 0.5rem !important;
-        font-size: 0.9rem;
-    }
-}
-
 .overMenu {
     z-index: 5;
 }
@@ -1380,7 +1306,7 @@ table td {
 
 .wrong {
     font-family: Wrong, sans-serif;
-    font-size: 500%;
+    font-size: 7vw;
     color: white;
 }
 
@@ -1492,7 +1418,7 @@ table td {
 }
 
 .mr-auto a {
-    font-size: 0.8rem !important;
+    font-size: 1.2vw !important;
 }
 
 .navbar-light .navbar-nav .nav-link:focus,
@@ -1530,13 +1456,6 @@ table td {
 .teamContainer {
     max-width: 1220px;
     margin: 0 auto;
-}
-
-@media (max-width: 1200px) {
-    .teamContainer {
-        max-width: 920px;
-        margin: 0 auto;
-    }
 }
 
 @media (max-width: 900px) {
@@ -1629,10 +1548,6 @@ table td {
     left: -1000px;
     width: 10px;
     height: 10px;
-}
-
-.socialLinks {
-    display: none;
 }
 
 /*.navbar-expand-lg {*/
