--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1677,17 +1677,16 @@ table td {
 .welcome {
     display: flex;
     justify-content: center;
-    font-size: 5vw;
+    font-size: 5.5vw;
     font-family: Wrong, sans-serif;
     padding-top: 10%;
 }
 .welcomeSub {
     font-family: Mulish, sans-serif;
     font-size: 1.2vw;
-    margin-top: -2%;
-    width: 70%;
+    margin-top: -1%;
 }
-.empireSub {
+.textSub {
     font-family: Mulish, sans-serif;
     font-size: 1.2vw;
     margin-top: -2%;
