made button responsive

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1724,6 +1724,17 @@ table td {
     box-shadow: 0px 0px 15px yellow;
     font-size: 120%;
 }
+@media (max-width: 900px) {
+    .button {
+        font-size: 1.5vw !important;
+    }
+    .buttonSeed {
+        font-size: 1.5vw !important;
+    }
+    .buttonBrowse {
+        font-size: 1.5vw !important;
+    }
+}
 .buttonSeed {
     border: 1px #f7f8f8 solid;
     border-radius: 50px;
@@ -1776,6 +1787,19 @@ table td {
     box-shadow: 0px 0px 15px yellow;
     font-size: 120%;
 }
+.empireButton {
+    border: 1px #a69d0a solid;
+    border-radius: 50px;
+    font-weight: bold;
+    color: black;
+    background: #fae901;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    box-shadow: 0px 0px 15px yellow;
+    font-size: 110%;
+}
 .corePool {
     border: black solid;
     background: #ecdc00;
@@ -1809,19 +1833,6 @@ table td {
     font-size: 500%;
     font-family: Wrong, sans-serif;
     padding-top: 10%;
-}
-.empireButton {
-    border: 1px #a69d0a solid;
-    border-radius: 50px;
-    font-weight: bold;
-    color: black;
-    background: #fae901;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 1%;
-    padding-bottom: 1%;
-    box-shadow: 0px 0px 15px yellow;
-    font-size: 110%;
 }
 .exchanges {
     margin-top: -2%;
