--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1936,7 +1936,38 @@ b,
     width: 120%;
     margin-top: -5%;
 }
+.empireButtonDiv{
+    padding-top: 4%;
+    padding-bottom: 7%;
+}
+.turfImage{
+    width: 115%;
+    margin-left: -20%;
+    padding-top: 18px;
+}
 @media (max-width: 960px) {
+    .title{
+        justify-content: center;
+        font-size: 10vw;
+        padding-top: 0px;
+    }
+    .textSub{
+        font-size: 2vw;
+        width: 100%;
+        padding-left: 5%;
+        padding-right: 5%;
+        text-align: center;
+    }
+    .empireButtonDiv{
+    justify-content: center;
+    display: flex;
+    }
+    .turfImage{
+        width: 70%;
+        padding-left: 25%;
+        margin-left: 0%;
+         padding-top: 0px; 
+    }
     .button {
         font-size: 5.5vw !important;
         margin: 1%;
