last component done

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1703,6 +1703,11 @@ table td {
     font-family: Wrong, sans-serif;
     padding-top: 10%;
 }
+.welcomeLeak {
+    font-size: 7.5vw;
+    font-family: Wrong, sans-serif;
+    padding-top: 10%;
+}
 .welcomeSub {
     font-family: Mulish, sans-serif;
     font-size: 2vw;
@@ -1970,6 +1975,11 @@ b,
     display: flex;
     justify-content: center;
 }
+
+.leakMobile {
+    display: flex;
+    justify-content: center;
+}
 @media (max-width: 600px) {
     .title {
         justify-content: center;
@@ -2008,5 +2018,9 @@ b,
     .buttonAssets {
         font-size: 5.5vw !important;
         margin: 1%;
+    }
+    .welcomeLeak {
+        display: flex;
+        justify-content: center;
     }
 }
